--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -10,10 +10,26 @@ on:
     branches: [ main ]
 
 jobs:
+  build:
+
+    runs-on: ubuntu-latest
+    
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up JDK 11
+      uses: actions/setup-java@v2
+      with:
+        java-version: '11'
+        distribution: 'adopt'
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+    - name: Compile with Gradle
+      run: ./gradlew build 
+
   compile:
 
     runs-on: ubuntu-latest
-
+    
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 11
@@ -29,7 +45,7 @@ jobs:
   test:
 
     runs-on: ubuntu-latest
-
+    needs: compile
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 11
@@ -45,7 +61,7 @@ jobs:
   assemble:
 
     runs-on: ubuntu-latest
-
+    needs: [compile, test]
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 11
