--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -66,4 +66,4 @@ jobs:
     - uses: actions/upload-artifact@v2
       with:
         name: buildJar
-        path: /build/libs/*.jar
+        path: /build/libs/*
