--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -63,10 +63,7 @@ jobs:
     - name: Assemble with Gradle
       run: ./gradlew assemble 
 
-    - name: test
-      run: 
-        echo `ls`
     - uses: actions/upload-artifact@v2
       with:
         name: buildJar
-        path: /build/libs/*
+        path: build/libs/*.jar
