--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -6,14 +6,10 @@ name: Java CI with Gradle
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
 
 jobs:
-  compile:
-
+  Compile:
     runs-on: ubuntu-latest
-    
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 11
@@ -26,10 +22,9 @@ jobs:
     - name: Compile with Gradle
       run: ./gradlew compileJava 
 
-  test:
-
+  Test:
     runs-on: ubuntu-latest
-    needs: compile
+    needs: Compile
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 11
@@ -47,10 +42,11 @@ jobs:
         name: testReport
         path: build/reports/tests/test
 
-  assemble:
-
+  Assemble:
     runs-on: ubuntu-latest
-    needs: [compile, test]
+    needs: [Compile, Test]
+    outputs:
+      filename: ${{ steps.step1.outputs.filename }}
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 11
@@ -67,3 +63,27 @@ jobs:
       with:
         name: buildJar
         path: build/libs/*.jar
+
+    - name: Get jar name
+      id: step1
+      run: echo "::set-output name=filename::`ls | grep .jar`"
+
+  Release:
+    runs-on: ubuntu-latest
+    needs: [Compile, Test, Assemble]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - uses: actions/download-artifact@v2
+        with:
+          name: buildJar
+          path: ${{needs.Assemble.outputs.filename}}
+          
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: ${{needs.Assemble.outputs.filename}}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
