--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -69,9 +69,11 @@ jobs:
       run: echo "::set-output name=filename::`ls | grep .jar`"
 
   Release:
-    runs-on: ubuntu-latest
-    needs: [Compile, Test, Assemble]
-    if: startsWith(github.ref, 'refs/tags/')
+    prod-check:
+      if: startsWith(github.ref, 'refs/tags/')
+      runs-on: ubuntu-latest
+      needs: [Compile, Test, Assemble]
+      
       steps:
         - name: Checkout
           uses: actions/checkout@v2
