--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -75,20 +75,14 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Build
-        run: echo "Hello world" > Release.txt
-
       - uses: actions/download-artifact@v2
         with:
           name: buildJar
           path: ${{needs.Assemble.outputs.filename}}
-
-      - name: test
-        run: echo `ls`
           
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
-          files: Release.txt
+          files: *.jar
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
