--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -70,7 +70,9 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
     needs: [Compile, Test, Assemble]
-    
+    env:
+      FILE_NAME: ${{needs.Assemble.outputs.filename}}
+
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -78,11 +80,11 @@ jobs:
       - uses: actions/download-artifact@v2
         with:
           name: buildJar
-          path: ${{needs.Assemble.outputs.filename}}
+          path: $FILE_NAME
           
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
-          files: *.jar
+          files: $FILE_NAME
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
