--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -70,27 +70,23 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
     needs: [Compile, Test, Assemble]
-    env:
-      FILE_NAME: ${{needs.Assemble.outputs.filename}}
 
     steps:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: test
-        run: echo `ls`
-
       - uses: actions/download-artifact@v2
         with:
           name: buildJar
-          path: ${{ env.FILE_NAME }}
-          
-      - name: test2
-        run: echo `ls`
+          path: ${{needs.Assemble.outputs.filename}}
 
+      - name: Get filename
+        id: get-filename
+        run: echo "::set-output name=filename::`ls | grep .jar`"
+          
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
-          files: ${{ env.FILE_NAME }}
+          files: ${{ steps.get-filename.outputs.filename }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
